Fix overflow-y issue at dashboard

--- a/client/app/components/TurniloComponent/client/visualizations/base-visualization/base-visualization.scss
+++ b/client/app/components/TurniloComponent/client/visualizations/base-visualization/base-visualization.scss
@@ -24,6 +24,7 @@
   .internals {
     @include pin-full;
     overflow: auto;
+    overflow-y: clip;
     padding: 25px 0px;
   }
 
